# fred-bronze-to-gold-pipeline

./: .gitignore  README.md  databricks.yml  handoff.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: benchmark_rates.yml  config.example.yaml  credit.yml  cross_series.yml  curve.yml  equity_factor_attribution.yml  equity_reconciliations.yml  fomc.yml  funding.yml  global_series.yml  inflation_forecast.yml  inflation_items.yml  ml_features.yml  recession_model.yml  reconciliations.yml  regime.yml  release_calendar.yml  sec_concepts.yml  sec_ratios.yml  series_catalog.yml  spreads.yml  stats_pairs.yml
docs/: adding_a_source.md  architecture.md  data_dictionary.md  deployment_runbook.md  incremental_loading.md  market_terminal_gold_views.md  market_terminal_series_gap.md  running_multi_source.md
manifests/: bea_national_accounts.yml  bea_pce_items.yml  bls_cpi_basket.yml  bls_cpi_basket_sa.yml  bls_labor.yml  census_indicators.yml  eia_energy.yml  equity_stooq.yml  equity_tiingo.yml  equity_tiingo_constituents.yml  etf_holdings.yml  fed_funding.yml  global_policy.yml  growth.yml  ice_credit.yml  inflation.yml  international.yml  labor.yml  labor_extra.yml  macro_flags.yml  manifest.schema.json  market_indices.yml  money_banking.yml  national_accounts_extra.yml  prices_extra.yml  production_housing.yml  rates.yml  regional_aggregates.yml  regional_fed_indicators.yml  sec_financials.yml  state_coincident_index.yml  state_house_price.yml  state_unemployment.yml  treasury_fiscal.yml  worldbank_global.yml
notebooks/: run_pipeline.py
sql/: 10_meta.sql  (+6 more)
(+163 files in other folders)
